package grpc.trade.dto;

public class TradeDtlsDto {
    private Long id;

    private Long tradeDtlsNo;

    private Long tradeId;

    private Long productId;

    private Long lotNo;
    
    private String productCd;

    private String productName;

    private String mgtProductName;

    private String taxKbn;

    private String choicesAltStockItemRowCd;

    private String choicesAltStockItemColCd;

    private String tradeProductMgtId;

    private String tradeDtlsOpt;

    private String buyOptCommissionTxt;

    private String buyOptCommissionTxtHist;

    private Long buyOptCommission;

    private Long buyOptCommissionEdit;

    private String giftPackingType;

    private String giftPackingTypeEdit;

    private Long giftCommission;

    private Long giftCommissionEdit;

    private String giftMsg;

    private String giftMsgEdit;

    private String noshiType;

    private String noshiTypeEdit;

    private String noshiPresenterName1;

    private String noshiPresenterName1Edit;

    private String noshiPresenterName2;

    private String noshiPresenterName2Edit;

    private String noshiPresenterName3;

    private String noshiPresenterName3Edit;

    private Long tardeDtlsDscntBfrUptprc;

    private Long tardeDtlsDscntAmt;

    private Long tardeDtlsUntprc;

    private Long tardeDtlsUntprcEdit;

    private Long tardeDtlsQuantity;

    private Long tardeDtlsQuantityEdit;

    private Long tardeDtlsPtRate;

    private Long tardeDtlsPt;

    private Long tardeDtlsAmtSubtotal;

    private Long commissionSubtotal;

    private Integer tmsaleProductFlg;

    private Integer tradeDtlsCancleFinFlg;

    private String tradeDtlsCancleDate;

    private String shoppingDayDispTxt;

    private String shoppingTimlmtDay;

    private String divTimlmtDay;

    private String digiconKtn;

    private Integer adultFlg;

    private Integer ageLimit;

    private Integer delFlg;

    private String createDate;

    private String updateDate;

    private Long createId;

    private Long updateId;

    private String createPgmId;

    private String updatePgmId;

    private Long version;
    public Long getId() {
        return id;
    }

    public void setId(Long id) {
        this.id = id;
    }

    public Long getTradeDtlsNo() {
        return tradeDtlsNo;
    }

    public void setTradeDtlsNo(Long tradeDtlsNo) {
        this.tradeDtlsNo = tradeDtlsNo;
    }

    public Long getTradeId() {
        return tradeId;
    }

    public void setTradeId(Long tradeId) {
        this.tradeId = tradeId;
    }

    public Long getProductId() {
        return productId;
    }

    public void setProductId(Long productId) {
        this.productId = productId;
    }

    public Long getLotNo() {
        return lotNo;
    }

    public void setLotNo(Long lotNo) {
        this.lotNo = lotNo;
    }

    public String getProductName() {
        return productName;
    }

    public void setProductName(String productName) {
        this.productName = productName;
    }

    public String getMgtProductName() {
        return mgtProductName;
    }

    public void setMgtProductName(String mgtProductName) {
        this.mgtProductName = mgtProductName;
    }

    public String getTaxKbn() {
        return taxKbn;
    }

    public void setTaxKbn(String taxKbn) {
        this.taxKbn = taxKbn;
    }

    public String getChoicesAltStockItemRowCd() {
        return choicesAltStockItemRowCd;
    }

    public void setChoicesAltStockItemRowCd(String choicesAltStockItemRowCd) {
        this.choicesAltStockItemRowCd = choicesAltStockItemRowCd;
    }

    public String getChoicesAltStockItemColCd() {
        return choicesAltStockItemColCd;
    }

    public void setChoicesAltStockItemColCd(String choicesAltStockItemColCd) {
        this.choicesAltStockItemColCd = choicesAltStockItemColCd;
    }

    public String getTradeProductMgtId() {
        return tradeProductMgtId;
    }

    public void setTradeProductMgtId(String tradeProductMgtId) {
        this.tradeProductMgtId = tradeProductMgtId;
    }

    public String getTradeDtlsOpt() {
        return tradeDtlsOpt;
    }

    public void setTradeDtlsOpt(String tradeDtlsOpt) {
        this.tradeDtlsOpt = tradeDtlsOpt;
    }

    public Long getBuyOptCommission() {
        return buyOptCommission;
    }

    public void setBuyOptCommission(Long buyOptCommission) {
        this.buyOptCommission = buyOptCommission;
    }

    public Long getBuyOptCommissionEdit() {
        return buyOptCommissionEdit;
    }

    public void setBuyOptCommissionEdit(Long buyOptCommissionEdit) {
        this.buyOptCommissionEdit = buyOptCommissionEdit;
    }

    public String getGiftPackingType() {
        return giftPackingType;
    }

    public void setGiftPackingType(String giftPackingType) {
        this.giftPackingType = giftPackingType;
    }

    public String getGiftPackingTypeEdit() {
        return giftPackingTypeEdit;
    }

    public void setGiftPackingTypeEdit(String giftPackingTypeEdit) {
        this.giftPackingTypeEdit = giftPackingTypeEdit;
    }

    public Long getGiftCommission() {
        return giftCommission;
    }

    public void setGiftCommission(Long giftCommission) {
        this.giftCommission = giftCommission;
    }

    public Long getGiftCommissionEdit() {
        return giftCommissionEdit;
    }

    public void setGiftCommissionEdit(Long giftCommissionEdit) {
        this.giftCommissionEdit = giftCommissionEdit;
    }

    public String getGiftMsg() {
        return giftMsg;
    }

    public void setGiftMsg(String giftMsg) {
        this.giftMsg = giftMsg;
    }

    public String getGiftMsgEdit() {
        return giftMsgEdit;
    }

    public void setGiftMsgEdit(String giftMsgEdit) {
        this.giftMsgEdit = giftMsgEdit;
    }

    public String getNoshiType() {
        return noshiType;
    }

    public void setNoshiType(String noshiType) {
        this.noshiType = noshiType;
    }

    public String getNoshiTypeEdit() {
        return noshiTypeEdit;
    }

    public void setNoshiTypeEdit(String noshiTypeEdit) {
        this.noshiTypeEdit = noshiTypeEdit;
    }

    public String getNoshiPresenterName1() {
        return noshiPresenterName1;
    }

    public void setNoshiPresenterName1(String noshiPresenterName1) {
        this.noshiPresenterName1 = noshiPresenterName1;
    }

    public String getNoshiPresenterName1Edit() {
        return noshiPresenterName1Edit;
    }

    public void setNoshiPresenterName1Edit(String noshiPresenterName1Edit) {
        this.noshiPresenterName1Edit = noshiPresenterName1Edit;
    }

    public String getNoshiPresenterName2() {
        return noshiPresenterName2;
    }

    public void setNoshiPresenterName2(String noshiPresenterName2) {
        this.noshiPresenterName2 = noshiPresenterName2;
    }

    public String getNoshiPresenterName2Edit() {
        return noshiPresenterName2Edit;
    }

    public void setNoshiPresenterName2Edit(String noshiPresenterName2Edit) {
        this.noshiPresenterName2Edit = noshiPresenterName2Edit;
    }

    public String getNoshiPresenterName3() {
        return noshiPresenterName3;
    }

    public void setNoshiPresenterName3(String noshiPresenterName3) {
        this.noshiPresenterName3 = noshiPresenterName3;
    }

    public String getNoshiPresenterName3Edit() {
        return noshiPresenterName3Edit;
    }

    public void setNoshiPresenterName3Edit(String noshiPresenterName3Edit) {
        this.noshiPresenterName3Edit = noshiPresenterName3Edit;
    }

    public Long getTardeDtlsDscntBfrUptprc() {
        return tardeDtlsDscntBfrUptprc;
    }

    public void setTardeDtlsDscntBfrUptprc(Long tardeDtlsDscntBfrUptprc) {
        this.tardeDtlsDscntBfrUptprc = tardeDtlsDscntBfrUptprc;
    }

    public Long getTardeDtlsDscntAmt() {
        return tardeDtlsDscntAmt;
    }

    public void setTardeDtlsDscntAmt(Long tardeDtlsDscntAmt) {
        this.tardeDtlsDscntAmt = tardeDtlsDscntAmt;
    }

    public Long getTardeDtlsUntprc() {
        return tardeDtlsUntprc;
    }

    public void setTardeDtlsUntprc(Long tardeDtlsUntprc) {
        this.tardeDtlsUntprc = tardeDtlsUntprc;
    }

    public Long getTardeDtlsUntprcEdit() {
        return tardeDtlsUntprcEdit;
    }

    public void setTardeDtlsUntprcEdit(Long tardeDtlsUntprcEdit) {
        this.tardeDtlsUntprcEdit = tardeDtlsUntprcEdit;
    }

    public Long getTardeDtlsQuantity() {
        return tardeDtlsQuantity;
    }

    public void setTardeDtlsQuantity(Long tardeDtlsQuantity) {
        this.tardeDtlsQuantity = tardeDtlsQuantity;
    }

    public Long getTardeDtlsQuantityEdit() {
        return tardeDtlsQuantityEdit;
    }

    public void setTardeDtlsQuantityEdit(Long tardeDtlsQuantityEdit) {
        this.tardeDtlsQuantityEdit = tardeDtlsQuantityEdit;
    }

    public Long getTardeDtlsPtRate() {
        return tardeDtlsPtRate;
    }

    public void setTardeDtlsPtRate(Long tardeDtlsPtRate) {
        this.tardeDtlsPtRate = tardeDtlsPtRate;
    }

    public Long getTardeDtlsPt() {
        return tardeDtlsPt;
    }

    public void setTardeDtlsPt(Long tardeDtlsPt) {
        this.tardeDtlsPt = tardeDtlsPt;
    }

    public Long getTardeDtlsAmtSubtotal() {
        return tardeDtlsAmtSubtotal;
    }

    public void setTardeDtlsAmtSubtotal(Long tardeDtlsAmtSubtotal) {
        this.tardeDtlsAmtSubtotal = tardeDtlsAmtSubtotal;
    }

    public Long getCommissionSubtotal() {
        return commissionSubtotal;
    }

    public void setCommissionSubtotal(Long commissionSubtotal) {
        this.commissionSubtotal = commissionSubtotal;
    }

    public Integer getTmsaleProductFlg() {
        return tmsaleProductFlg;
    }

    public void setTmsaleProductFlg(Integer tmsaleProductFlg) {
        this.tmsaleProductFlg = tmsaleProductFlg;
    }

    public Integer getTradeDtlsCancleFinFlg() {
        return tradeDtlsCancleFinFlg;
    }

    public void setTradeDtlsCancleFinFlg(Integer tradeDtlsCancleFinFlg) {
        this.tradeDtlsCancleFinFlg = tradeDtlsCancleFinFlg;
    }

    public String getTradeDtlsCancleDate() {
        return tradeDtlsCancleDate;
    }

    public void setTradeDtlsCancleDate(String tradeDtlsCancleDate) {
        this.tradeDtlsCancleDate = tradeDtlsCancleDate;
    }

    public String getShoppingDayDispTxt() {
        return shoppingDayDispTxt;
    }

    public void setShoppingDayDispTxt(String shoppingDayDispTxt) {
        this.shoppingDayDispTxt = shoppingDayDispTxt;
    }

    public String getShoppingTimlmtDay() {
        return shoppingTimlmtDay;
    }

    public void setShoppingTimlmtDay(String shoppingTimlmtDay) {
        this.shoppingTimlmtDay = shoppingTimlmtDay;
    }

    public String getDivTimlmtDay() {
        return divTimlmtDay;
    }

    public void setDivTimlmtDay(String divTimlmtDay) {
        this.divTimlmtDay = divTimlmtDay;
    }

    public String getDigiconKtn() {
        return digiconKtn;
    }

    public void setDigiconKtn(String digiconKtn) {
        this.digiconKtn = digiconKtn;
    }

    public Integer getAdultFlg() {
        return adultFlg;
    }

    public void setAdultFlg(Integer adultFlg) {
        this.adultFlg = adultFlg;
    }

    public Integer getAgeLimit() {
        return ageLimit;
    }

    public void setAgeLimit(Integer ageLimit) {
        this.ageLimit = ageLimit;
    }

    public Integer getDelFlg() {
        return delFlg;
    }

    public void setDelFlg(Integer delFlg) {
        this.delFlg = delFlg;
    }

    public String getCreateDate() {
        return createDate;
    }

    public void setCreateDate(String createDate) {
        this.createDate = createDate;
    }

    public String getUpdateDate() {
        return updateDate;
    }

    public void setUpdateDate(String updateDate) {
        this.updateDate = updateDate;
    }

    public Long getCreateId() {
        return createId;
    }

    public void setCreateId(Long createId) {
        this.createId = createId;
    }

    public Long getUpdateId() {
        return updateId;
    }

    public void setUpdateId(Long updateId) {
        this.updateId = updateId;
    }

    public String getCreatePgmId() {
        return createPgmId;
    }

    public void setCreatePgmId(String createPgmId) {
        this.createPgmId = createPgmId;
    }

    public String getUpdatePgmId() {
        return updatePgmId;
    }

    public void setUpdatePgmId(String updatePgmId) {
        this.updatePgmId = updatePgmId;
    }

    public Long getVersion() {
        return version;
    }

    public void setVersion(Long version) {
        this.version = version;
    }
    public String getProductCd() {
        return productCd;
    }

    public void setProductCd(String productCd) {
        this.productCd = productCd;
    }

    public String getBuyOptCommissionTxt() {
        return buyOptCommissionTxt;
    }

    public void setBuyOptCommissionTxt(String buyOptCommissionTxt) {
        this.buyOptCommissionTxt = buyOptCommissionTxt;
    }

    public String getBuyOptCommissionTxtHist() {
        return buyOptCommissionTxtHist;
    }

    public void setBuyOptCommissionTxtHist(String buyOptCommissionTxtHist) {
        this.buyOptCommissionTxtHist = buyOptCommissionTxtHist;
    }
}